2006-08-08 Erik Hjortsberg  <erik@katastrof.nu>

	* configure.ac, src/components/ogre/OgreSetup.cpp: removed the dependency on SDL_image, instead store the icon in compiled form
	* ember.desktop: added Application to the categories
	* src/components/ogre/CONTROLS: updated with a reference to ember.conf
	* src/components/ogre/OgreResourceLoader.cpp: Catch errors when initializing groups.

2006-08-07 Erik Hjortsberg  <erik@katastrof.nu>

	* ember.in: If an old version already has been installed, move the config files out of the way. 
	
2006-08-06 Erik Hjortsberg  <erik@katastrof.nu>

	* src/services/server/ServerService.cpp: Completely disable the OOG functionality since it wasn't used anyway. And more importantly, it triggered an assertion crash in eris when creating a new character. And since (at least 1.3.11) doesn't compile away assertions in release builds this will always trigger for new players.
	
2006-08-06 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/TerrainGenerator.cpp, src/components/ogre/TerrainShader.cpp, src/components/ogre/TerrainShader.h: Try to optimize the terrain material a bit more, though it's still too inefficient.

2006-08-06 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/model/Model.cpp, src/components/ogre/model/Model.h, src/components/ogre/model/ModelDefinition.cpp, src/components/ogre/model/ModelDefinition.h, src/components/ogre/model/XMLModelDefinitionSerializer.cpp, src/components/ogre/modeldefinitions/modeldefinition.xsd: support the renderDistance functionality on Ogre.

2006-08-06 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/AvatarCamera.cpp, src/components/ogre/AvatarCamera.h, src/components/ogre/GUIManager.cpp, src/components/ogre/GUIManager.h: moved the screenshot functionality from the GUIManager to AvatarCamera where it belongs.
	* src/components/ogre/scripting/bindings/lua/AvatarCamera.pkg, src/components/ogre/scripting/bindings/lua/lua_EmberOgre.cpp: updated bindings
	